--- a/main.html
+++ b/main.html
@@ -3,11 +3,26 @@
 <html>
 
 <head>
+	<title>Testimonial Section design</title>
 	<link rel="stylesheet" href="styles.css">
+	<style>
+		body{
+			background-color:#f5f5f5;
+		}
+		container{
+			padding:12px;
+		}
+	</style>
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div>
+		<main class="container">Testimonial</main>
+	</div>
+	<div></div>
+	<p>This product is amazing!I highly recommend to it anyone in need of a solution like this.</p>
+	<p>I have been using this for a few weeks now and it has completely transformed my workflow.</p>
     <script type="text/javascript" src="./script.js">
 </script>
 
