--- a/main.html
+++ b/main.html
@@ -10,8 +10,10 @@
 			background-color:#f5f5f5;
 		}
 		container{
-			padding:12px;
+			padding:10px;
+			border:15px;
 		}
+		
 	</style>
 </head>
 
@@ -20,9 +22,12 @@
 	<div>
 		<main class="container">Testimonial</main>
 	</div>
-	<div></div>
-	<p>This product is amazing!I highly recommend to it anyone in need of a solution like this.</p>
-	<p>I have been using this for a few weeks now and it has completely transformed my workflow.</p>
+	<div>
+	<p style="background-color:white">This product is amazing!I highly recommend to it anyone in need of a solution like this.</p>
+	</div>
+	<div>
+	<p style="background-color:white">I have been using this for a few weeks now and it has completely transformed my workflow.</p>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
