--- a/main.html
+++ b/main.html
@@ -6,12 +6,30 @@
 	<title>Testimonial Section design</title>
 	<link rel="stylesheet" href="styles.css">
 	<style>
-		body{
-			background-color:#f5f5f5;
-		}
-		container{
-			padding:10px;
-			border:15px;
+	body {
+            background-color: #f5f5f5;
+        }
+
+        .container {
+            padding: 20px;
+            background-color: white;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            max-width: 600px;
+            margin: auto;
+        }
+
+        .testimonial {
+            padding: 15px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            margin-bottom: 15px;
+            background-color: #f9f9f9;
+        }
+
+        .author {
+            text-align: right;
+            font-style: italic;
 		}
 		
 	</style>
@@ -19,14 +37,16 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<div>
-		<main class="container">Testimonial</main>
-	</div>
-	<div>
-	<p style="background-color:white">This product is amazing!I highly recommend to it anyone in need of a solution like this.</p>
-	</div>
-	<div>
-	<p style="background-color:white">I have been using this for a few weeks now and it has completely transformed my workflow.</p>
+	<div class="container">
+        <h2>Testimonials</h2>
+        <div class="testimonial">
+            <p>This product is amazing! I highly recommend it to anyone in need of a solution like this.</p>
+            <p class="author">- John Doe</p>
+        </div>
+        <div class="testimonial">
+            <p>I have been using this for a few weeks now and it has completely transformed my workflow.</p>
+            <p class="author">- Jane Smith</p>
+        </div>
 	</div>
     <script type="text/javascript" src="./script.js">
 </script>
